Fix box shadow on mobile

--- a/_sass/bootstrap-sass/_cover.scss
+++ b/_sass/bootstrap-sass/_cover.scss
@@ -45,7 +45,7 @@
     height: 100%; /* For at least Firefox */
     min-height: 100%;
     -webkit-box-shadow: inset 0 0 100px rgba(255,255,255,1);
-            box-shadow: inset 0 0 500px rgba(255,255,255,1);
+            box-shadow: inset 0 0 100px rgba(255,255,255,1);
   }
   .site-wrapper-inner {
     display: table-cell;
@@ -150,6 +150,12 @@
       position: fixed;
       bottom: 0;
     }
+
+    .site-wrapper {
+      -webkit-box-shadow: inset 0 0 500px rgba(255,255,255,1);
+              box-shadow: inset 0 0 500px rgba(255,255,255,1);
+    }
+
     /* Start the vertical centering */
     .site-wrapper-inner {
       vertical-align: middle;
